<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout android:id="@+id/LinearLayout_settings_placehoder1"
        android:layout_weight="0.9"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </LinearLayout>
    
    <LinearLayout android:id="@+id/LinearLayout_settings_placehoder2"
         android:layout_width="fill_parent" 
		 android:orientation="vertical"
 		 android:layout_height="fill_parent"
 		 android:layout_weight="0.1">

        <LinearLayout android:id="@+id/LinearLayout_settings_placehoder3" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
        </LinearLayout>
        
        <LinearLayout android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:id="@+id/LinearLayout_ipaddr" 
			android:orientation="horizontal" 
			android:layout_height="wrap_content">

		<TextView android:textSize="10pt" 
			android:id="@+id/app_host_ipaddr_lbl" 
			android:text="@string/app_host_ipaddr_lbl"
			android:layout_weight="0.7"
			android:textColor="@color/blue"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
		</TextView>
		
		<EditText android:id="@+id/app_host_ipaddr_txt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.3"
			android:ems="10"
			android:inputType="text">
				<requestFocus />
		</EditText>
		
		</LinearLayout>
  
		<LinearLayout android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:gravity="center" 
			android:layout_width="fill_parent" 
			android:id="@+id/LinearLayout_hostport" 
			android:orientation="horizontal" 
			android:layout_height="wrap_content">
         
			<TextView android:textSize="10pt" 
				android:id="@+id/app_host_port_lbl" 
				android:text="@string/app_host_port_lbl"
				android:layout_weight="0.7" 
				android:textColor="@color/blue"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
			</TextView>
				 
			<EditText android:id="@+id/app_host_port_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0.3"
				android:ems="10"
				android:inputType="number" >
					<requestFocus />
			</EditText>
    
		</LinearLayout>
        
	    <LinearLayout android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:gravity="center"
			android:id="@+id/LinearLayout_setting_buttons"
			android:layout_width="fill_parent" 
			android:orientation="horizontal" 
			android:layout_height="wrap_content">
	    
	        <!-- 
			android:background="@drawable/btn_blue"
			style="@style/button_text_blue"
			-->
	        
		<Button android:text="@string/app_settings_connect_btn" 
			android:textSize="9pt"
			android:layout_margin="5dp"
			style="@style/button_style"
			android:id="@+id/app_settings_connect_btn" 
			android:layout_width="wrap_content" 
			android:layout_weight="0.5"
			android:layout_height="fill_parent">
		</Button>

		<Button android:text="@string/app_settings_disconnect_btn" 
			android:textSize="9pt"
			android:layout_margin="5dp"
			style="@style/button_style"
			android:id="@+id/app_settings_disconnect_btn" 
			android:layout_width="wrap_content"
			android:layout_weight="0.5"
			android:layout_height="fill_parent">
		</Button>
	            
	        </LinearLayout>
	    </LinearLayout>
	
</LinearLayout>