<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout android:id="@+id/LinearLayout_control_placehoder1"
        android:layout_weight="0.9"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </LinearLayout>
    
    <LinearLayout android:id="@+id/LinearLayout_control_placehoder2"
	        android:layout_width="fill_parent"
	        android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_weight="0.1">

        <LinearLayout android:id="@+id/LinearLayout_control_placehoder3" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
        </LinearLayout>
        
        <LinearLayout android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:id="@+id/LinearLayout_enable"
			android:orientation="horizontal"
			android:layout_height="wrap_content">
            
            <TextView android:textSize="10pt" 
	            	android:id="@+id/app_control_enable_lbl"
	            	android:text="@string/app_control_enable_lbl"
	            	android:layout_weight="0.1" 
					android:textColor="@color/blue"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
	            　　      </TextView>
            
            <CheckBox android:id="@+id/app_control_enable_cbx"
                 android:layout_weight="0.9"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:gravity="left">
            </CheckBox>
            
        </LinearLayout>
        
       <LinearLayout android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:gravity="center"
           android:layout_width="fill_parent"
		   android:id="@+id/LinearLayout_direction"
		   android:orientation="horizontal"
		   android:layout_height="wrap_content">
            
           <TextView android:textSize="10pt" 
	            	android:id="@+id/app_control_direction_lbl"
	            	android:text="@string/app_control_direction_lbl"
					android:textColor="@color/blue"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
	            　　      </TextView>
			
		   <Spinner android:id="@+id/app_control_direction_spnr" 
		       		android:layout_width="0dip"
		       		android:layout_weight="0.5"
					android:layout_height="wrap_content">
		   </Spinner>		
            
        </LinearLayout>
        
        <LinearLayout android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_width="fill_parent" 
		    android:id="@+id/LinearLayout_frequency"
		    android:orientation="horizontal"
		    android:layout_height="wrap_content">
           
           <TextView android:textSize="10pt" 
	            	android:id="@+id/app_control_frequency_lbl"
	            	android:text="@string/app_control_frequency_lbl"
					android:textColor="@color/blue"
					android:layout_weight="0.1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
	            　　      </TextView>            
            
           	<EditText android:id="@+id/app_control_frequency_txt"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.9"
	                android:ems="10"
	                android:inputType="number" >
	          <requestFocus />
	        </EditText>
	                   
        </LinearLayout>
        
        <LinearLayout android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
			android:id="@+id/LinearLayout_control_buttons"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:layout_height="wrap_content">
            
	            　　   <Button android:text="@string/app_control_ok_btn"
            android:textSize="9pt"
            android:background="@drawable/btn_blue"
				style="@style/button_text_blue"	
				android:layout_margin="5dp"
				android:id="@+id/app_control_ok_btn" 
			    android:layout_width="wrap_content" 
			    android:layout_weight="0.5"
			    android:layout_height="fill_parent">
	            　　   </Button>
	       
	       <Button android:text="@string/app_control_cancel_btn"
	           android:textSize="9pt"
				android:layout_margin="5dp"
				style="@style/button_text_blue"	
				android:background="@drawable/btn_blue"
				android:id="@+id/app_control_cancel_btn" 
			    android:layout_width="wrap_content"
			    android:layout_weight="0.5"
			    android:layout_height="fill_parent">
	            　　   </Button>            
            
        </LinearLayout>
    </LinearLayout>	

</LinearLayout>